Fixed order of link type for ferriswheelstyle.css

--- a/ferriswheel.html
+++ b/ferriswheel.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Ferris Wheel</title>
-		<link rel="stylesheet" type="css/text" href="ferriswheelstyle.css" />
+		<link rel="stylesheet" type="text/css" href="ferriswheelstyle.css" />
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 
 
